# PyEhsa

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  tests.yml
examples/: README.md  basic_usage.py  demo_sao_paulo.py  demo_sp.ipynb  ehsa_df.csv
examples/DISTPOL2021_MSP_CEM_V1_2/: DADOS_DISTPOL_2000_2005_MSP_CEM_V1.dbf  DADOS_DISTPOL_2000_2020_MSP_CEM_V1.csv  DADOS_DISTPOL_2006_2010_MSP_CEM_V1.dbf  DADOS_DISTPOL_2011_2015_MSP_CEM_V1.dbf  DADOS_DISTPOL_2016_2020_MSP_CEM_V1.dbf  DISTPOL2021_MSP_CEM_V1.DBF  DISTPOL2021_MSP_CEM_V1.shp  DISTPOL2021_MSP_CEM_V1.shx  DP2021_MSP_CEM_V1.DBF  DP2021_MSP_CEM_V1.shp  DP2021_MSP_CEM_V1.shx  demo_sp_2.ipynb  ehsa_df.csv
src/pyehsa/: __init__.py  ehsa_classification.py  ehsa_plotting.py  emerging_hotspot_analysis.py  gi_star.py  mann_kendall.py  pre_processing.py  spacial_weights.py  spatial_weights.py
src/pyehsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyehsa/visualization/: ehsa_visualization.html
tests/: __init__.py  conftest.py  test_integration.py  test_mann_kendall.py  test_pre_processing.py
