[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyehsa"
version = "0.1.0"
description = "A Python library for Emerging Hot Spot Analysis (EHSA) of spatio-temporal data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CloudWalk", email = "lucas.azevedo@cloudwalk.io"}
]
keywords = ["spatial analysis", "hotspots", "statistics", "gis", "spatio-temporal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "geopandas>=0.13.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0", 
    "libpysal>=4.6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "shapely>=1.8.0",
    "python-geohash>=0.8.5",
    "folium>=0.14.0",
    "esda>=2.4.0",
    "numba>=0.56.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "pylint>=2.17",
    "coverage>=7.0"
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.3"
]

[project.urls]
Homepage = "https://github.com/yourusername/PyEhsa"
Documentation = "https://pyehsa.readthedocs.io"
Repository = "https://github.com/yourusername/PyEhsa"
"Bug Tracker" = "https://github.com/yourusername/PyEhsa/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyehsa = ["visualization/*.html"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
